--- a/style.css
+++ b/style.css
@@ -141,12 +141,12 @@ header .contactInfo {
         max-width: 300px;
         height: 150px;
     }
-
+    /*
     .photo.active {
         width: 400px;
         height: 400px;
     }
-
+    */
     .info {
         display: flex;
         flex-direction: column;
